<resources>
    <string name="app_name">DEVIL</string>
    <string name="title_activity_maps">DEVIL</string>
    <string name="title_activity_main4">DEVIL</string>
    <string name="facebook_app_id">473953329622142</string>
    <string name="fb_login_protocol_scheme">fb473953329622142</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps1">Map</string>
    <string name="task_reports">Task Reports</string>
    <string name="check_in">Check IN</string>
    <string name="client_data_crm">Client Data CRM</string>
    <string name="brochure">Brochure</string>
    <string name="add_planner">Add Planner</string>
    <string name="reports">Reports</string>
    <string name="attendance_reports">Attendance Reports</string>
    <string name="planner_reports">Planner Reports</string>
    <string name="checkin_out_reports">Checkin/out Reports</string>
    <string name="dsr_reports">DSR Reports</string>
    <string name="expenses_reports">Expenses Reports</string>
    <string name="reset_password">Reset Password</string>
    <string name="title_activity_main6">Main6Activity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_maps2">Map</string>
    <string name="tracking">Tracking</string>
    <string name="title_activity_check_in">Map</string>
    <string name="title_activity_add_new_client">Map</string>
    <string name="title_activity_main7">Main7Activity</string>
    <string name="title_activity_chat__employer">Chat_Employer</string>


</resources>
